# ksense-assessment

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  models.py
