[project]
name = "ksense_assessment"
version = "0.1.0"
description = "An API integration demo project for the ksense assessment."
authors = [
    {name = "bailey",email = "bailey@sotek.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
